# Hybrid_Quantum_Technologies_For_Quantum_Support_Vector_Machines

./: .pdm-python  QgSVM_utils.py  README.md  load_data.py  pyproject.toml  quantum_SVM.py
playground/: QSVM_play.ipynb  run_qeSVM.ipynb
src/hybrid_qsvm/: quantum_SVM.py  utils.py
